--- a/files/settings.yaml
+++ b/files/settings.yaml
@@ -1,2 +1,2 @@
-token: 1346900789:AAHgrgKG5CjVdELAGhmogghgM9Vafs1ulJ8
-admins: ['315854463', '272243686']
+token: вводим токен бота полностью
+admins: ['234234342', 'вводим id аккаунтов']
